# multilspy

./: MANIFEST.in  pyproject.toml
src/multilspy/: __init__.py  __main__.py  cli.py  language_server.py
src/multilspy/init/: __init__.py  __main__.py
